# miniLLM

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHEATSHEET.md  Dockerfile  Makefile  PLAN.md  READINESS.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
configs/: model_tiny.yaml  pretrain_300m.yaml  pretrain_local.yaml  pretrain_local_offline.yaml  pretrain_minipile.yaml  pretrain_minipile_local.yaml  pretrain_tiny.yaml  sft_local.yaml  sft_minipile.yaml  sft_minipile_local.yaml  sft_tiny.yaml  sft_tools_tiny.yaml  tokenizer_32k.yaml  tokenizer_local.yaml  tokenizer_minipile.yaml
data/: sample.txt  sample_bfcl.jsonl  sample_chat.jsonl  sample_mcq.jsonl  sample_reason.jsonl  sample_safety.jsonl  sample_tools_chat.jsonl
infra/: README.md  cloud_setup.sh
infra/sky/: train.yaml
scripts/: benchmark.py  chat.py  check_ddp.py  demo.py  evaluate.py  export_gguf.py  export_hf.py  lm_eval_run.py  model_card.py  prepare_data.py  prepare_instruct.py  prepare_reason.py  prepare_tools.py  pretrain.py  quantize.py  run_all.py  sft.py  smoke_train.py  status.py  train_tokenizer.py  train_vision.py
src/llmscratch/: __init__.py
src/llmscratch/align/: __init__.py  grpo.py  reasoning.py  sft.py
src/llmscratch/apps/: __init__.py
src/llmscratch/data/: __init__.py  bin_data.py  chat.py  hf_stream.py  mixing.py  (+1 more)
tests/: test_apps.py  test_benchmark_tasks.py  test_data_resume.py  test_eval.py  test_hf_export.py  test_lm_eval_adapter.py  test_logger.py  test_model.py  test_reasoning.py  test_safety.py  test_tokenizer.py  test_tools.py  test_vision.py
(+44 files in other folders)
