[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscratch"
version = "0.0.1"
description = "A modular, learning-oriented LLM-from-scratch pipeline"
requires-python = ">=3.10"
dependencies = ["torch>=2.2", "numpy", "pyyaml", "tokenizers>=0.15", "datasets>=2.18", "tqdm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
